// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/bazel-registry/index getReleases metadata with yanked versions 1`] = `
{
  "registryUrl": "https://raw.githubusercontent.com/bazelbuild/bazel-central-registry/main",
  "releases": [
    {
      "version": "0.14.8",
    },
    {
      "version": "0.14.9",
    },
    {
      "version": "0.16.0",
    },
  ],
}
`;

exports[`modules/datasource/bazel-registry/index getReleases metadata without yanked versions 1`] = `
{
  "registryUrl": "https://raw.githubusercontent.com/bazelbuild/bazel-central-registry/main",
  "releases": [
    {
      "version": "0.14.8",
    },
    {
      "version": "0.14.9",
    },
    {
      "version": "0.15.0",
    },
    {
      "version": "0.16.0",
    },
  ],
}
`;
